--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -66,17 +66,82 @@
     "globalPartners": "الشركاء العالميون"
   },
    "footer": {
-    "companyDescription": "غرفتک الرقمیة الدائمة المدعومة بالذکاء الاصطناعی. جرب مستقبل عرض وبیع واکتشاف التکنولوجیا فی منصة ستیلار للهندسة البیعیة.",
-    "quickLinks": "روابط سریعة",
+    "companyDescription": "غرفتك الرقمية الدائمة المدعومة بالذكاء الاصطناعي. جرب مستقبل عرض وبيع واكتشاف التكنولوجيا في منصة ستيلار للهندسة البيعية.",
+    "quickLinks": "روابط سريعة",
     "ourServices": "خدماتنا",
     "contactInfo": "معلومات الاتصال",
-    "address": "١٢٣ شارع الابتکار، وادی التکنولوجیا، دبی، الإمارات",
-    "newsletterTitle": "ابق علی اطلاع",
-    "newsletterDescription": "اشترک فی نشرتنا الإخباریة واحصل علی آخر التحدیثات حول الابتکارات التقنیة وفرص الاستثمار.",
-    "emailPlaceholder": "أدخل عنوان بریدک الإلکترونی",
-    "subscribe": "اشترک",
-    "privacyPolicy": "سیاسة الخصوصیة",
+    "address": "١٢٣ شارع الابتكار، وادي التقنية، دبي، الإمارات العربية المتحدة",
+    "newsletterTitle": "ابق على اطلاع",
+    "newsletterDescription": "اشترك في نشرتنا الإخبارية واحصل على آخر التحديثات حول الابتكارات التقنية وفرص الاستثمار.",
+    "emailPlaceholder": "أدخل بريدك الإلكتروني",
+    "subscribe": "اشترك",
+    "subscribing": "جاري الاشتراك...",
+    "subscribeSuccess": "تم الاشتراك في النشرة الإخبارية بنجاح!",
+    "privacyPolicy": "سياسة الخصوصية",
     "termsOfService": "شروط الخدمة",
-    "copyright": "© {{year}} ستیلارسیب. جمیع الحقوق محفوظة."
+    "copyright": "© {{year}} ستيلارسيب. جميع الحقوق محفوظة.",
+    "followUs": "تابعنا",
+    "phone": "+٩٧١ ٤ ١٢٣ ٤٥٦٧",
+    "email": "info@stellarsep.com"
+  },
+    "about": {
+    "pageTitle": "من نحن",
+    "heroTitle": "نحول تجارة التكنولوجيا في دول الخليج",
+    "heroSubtitle": "منصة هندسة المبيعات المدعومة بالذكاء الاصطناعي",
+    "paragraph1": "ستيلارسيب هي منصة هندسة المبيعات المدعومة بالذكاء الاصطناعي التي تحول كيفية اتصال شركات التكنولوجيا وعرضها وبيعها عبر دول مجلس التعاون الخليجي.",
+    "paragraph2": "تمكن الشركات الناشئة والبائعين من تقديم منتجاتهم من خلال عروض توضيحية تفاعلية مولدة بالذكاء الاصطناعي، بينما يمكن للمشترين والمستثمرين اكتشاف وتقييم والتفاعل مع الحلول المناسبة - بشكل أسرع وأذكى من أي وقت مضى.",
+    "paragraph3": "باستخدام المطابقة المدفوعة بالذكاء الاصطناعي والتحليلات التنبؤية وتكاملات CRM/ERP، يربط ستيلارسيب بين الابتكار والفرصة، محولاً كل يوم إلى معرض رقمي ذكي للنمو والتعاون.",
+    "ourMissionTitle": "مهمتنا",
+    "ourMissionText": "ثورة في سوق التكنولوجيا من خلال خلق نظام بيئي ذكي حيث يلتقي الابتكار بالفرصة، مدعومًا بالذكاء الاصطناعي ومدفوعًا بالنجاح.",
+    "ourVisionTitle": "رؤيتنا",
+    "ourVisionText": "أن نصبح المنصة الرائدة للهندسة المبيعات الرقمية في دول مجلس التعاون الخليجي، ونمكن من الاتصالات السلسة بين مقدمي التكنولوجيا والباحثين عنها، مع تعزيز الابتكار والنمو في الاقتصاد الرقمي."
+  },
+    "loginPage": {
+    "pageTitle": "تسجيل الدخول",
+    "welcomeBack": "مرحباً بعودتك!",
+    "loginSubtitle": "يرجى تسجيل الدخول إلى حسابك",
+    "usernameLabel": "اسم المستخدم",
+    "usernamePlaceholder": "أدخل اسم المستخدم",
+    "passwordLabel": "كلمة المرور",
+    "passwordPlaceholder": "أدخل كلمة المرور",
+    "rememberMe": "تذكرني",
+    "forgotPassword": "نسيت كلمة المرور؟",
+    "loginButton": "تسجيل الدخول",
+    "noAccount": "ليس لديك حساب؟",
+    "signUp": "إنشاء حساب",
+    "orLoginWith": "أو سجل الدخول باستخدام",
+    "loginSuccess": "تم تسجيل الدخول بنجاح!",
+    "loginError": "اسم المستخدم أو كلمة المرور غير صحيحة"
+  },
+   "contactPage": {
+    "title": "اتصل بنا",
+    "subtitle": "تواصل معنا لأي استفسارات أو دعم",
+    "getInTouch": "تواصل معنا",
+    "location": "الموقع",
+    "locationValue": "دبي، الإمارات العربية المتحدة",
+    "email": "البريد الإلكتروني",
+    "emailValue": "info@stellarsep.com",
+    "phone": "الهاتف",
+    "phoneValue": "+971 50 123 4567",
+    "workingHours": "ساعات العمل",
+    "workingHoursValue": "الأحد - الخميس: 9:00 صباحاً - 6:00 مساءً",
+    "followUs": "تابعنا",
+    "sendMessage": "أرسل لنا رسالة",
+    "nameFormLabel": "الاسم الكامل",
+    "namePlaceholder": "أدخل اسمك الكامل",
+    "emailFormLabel": "عنوان البريد الإلكتروني",
+    "emailPlaceholder": "أدخل عنوان بريدك الإلكتروني",
+    "phoneFormLabel": "رقم الهاتف",
+    "phonePlaceholder": "أدخل رقم هاتفك",
+    "subjectFormLabel": "الموضوع",
+    "subjectPlaceholder": "أدخل الموضوع",
+    "messageFormLabel": "الرسالة",
+    "messagePlaceholder": "أدخل رسالتك هنا...",
+    "submitButton": "إرسال الرسالة",
+    "sending": "جاري الإرسال...",
+    "successMessage": "تم إرسال الرسالة بنجاح! سنتواصل معك قريباً.",
+    "errorMessage": "فشل إرسال الرسالة. يرجى المحاولة مرة أخرى."
   }
+
+
 }
