--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -74,8 +74,73 @@
     "newsletterDescription": "Subscribe to our newsletter and get the latest updates on tech innovations and investment opportunities.",
     "emailPlaceholder": "Enter your email address",
     "subscribe": "Subscribe",
+    "subscribing": "Subscribing...",
+    "subscribeSuccess": "Successfully subscribed to newsletter!",
     "privacyPolicy": "Privacy Policy",
     "termsOfService": "Terms of Service",
-    "copyright": "© {{year}} StellarSEP. All rights reserved."
+    "copyright": "© {{year}} StellarSEP. All rights reserved.",
+    "followUs": "Follow Us",
+    "phone": "+971 4 123 4567",
+    "email": "info@stellarsep.com"
+  },
+    "about": {
+    "pageTitle": "About Us",
+    "heroTitle": "Transforming Technology Commerce in the GCC",
+    "heroSubtitle": "AI-Powered Sales Engineering Platform",
+    "paragraph1": "StellarSep is an AI-powered Sales Engineering Platform that transforms how technology companies connect, showcase, and sell across the GCC.",
+    "paragraph2": "It enables startups and vendors to present their products through interactive AI-generated demos, while buyers and investors can discover, evaluate, and engage with the right solutions — faster and smarter than ever.",
+    "paragraph3": "Using AI-driven matchmaking, predictive analytics, and CRM/ERP integrations, StellarSep bridges innovation and opportunity, turning every day into a smart digital exhibition for growth and collaboration.",
+    "ourMissionTitle": "Our Mission",
+    "ourMissionText": "To revolutionize the technology marketplace by creating an intelligent ecosystem where innovation meets opportunity, powered by artificial intelligence and driven by success.",
+    "ourVisionTitle": "Our Vision",
+    "ourVisionText": "To become the leading digital sales engineering platform in the GCC, enabling seamless connections between technology providers and seekers, while fostering innovation and growth in the digital economy."
+  },
+    "loginPage": {
+    "pageTitle": "Login",
+    "welcomeBack": "Welcome Back!",
+    "loginSubtitle": "Please login to your account",
+    "usernameLabel": "Username",
+    "usernamePlaceholder": "Enter your username",
+    "passwordLabel": "Password", 
+    "passwordPlaceholder": "Enter your password",
+    "rememberMe": "Remember me",
+    "forgotPassword": "Forgot Password?",
+    "loginButton": "Login",
+    "noAccount": "Don't have an account?",
+    "signUp": "Sign Up",
+    "orLoginWith": "Or login with",
+    "loginSuccess": "Login successful!",
+    "loginError": "Invalid username or password"
+  },
+  "contactPage": {
+    "title": "Contact Us",
+    "subtitle": "Get in touch with us for any inquiries or support",
+    "getInTouch": "Get In Touch",
+    "location": "Location",
+    "locationValue": "Dubai, United Arab Emirates",
+    "email": "Email",
+    "emailValue": "info@stellarsep.com",
+    "phone": "Phone",
+    "phoneValue": "+971 50 123 4567",
+    "workingHours": "Working Hours",
+    "workingHoursValue": "Sunday - Thursday: 9:00 AM - 6:00 PM",
+    "followUs": "Follow Us",
+    "sendMessage": "Send Us a Message",
+    "nameFormLabel": "Full Name",
+    "namePlaceholder": "Enter your full name",
+    "emailFormLabel": "Email Address",
+    "emailPlaceholder": "Enter your email address",
+    "phoneFormLabel": "Phone Number",
+    "phonePlaceholder": "Enter your phone number",
+    "subjectFormLabel": "Subject",
+    "subjectPlaceholder": "Enter subject",
+    "messageFormLabel": "Message",
+    "messagePlaceholder": "Enter your message here...",
+    "submitButton": "Send Message",
+    "sending": "Sending...",
+    "successMessage": "Message sent successfully! We'll get back to you soon.",
+    "errorMessage": "Failed to send message. Please try again."
   }
+
+
 }
