add more screens

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -70,7 +70,7 @@
     "quickLinks": "روابط سريعة",
     "ourServices": "خدماتنا",
     "contactInfo": "معلومات الاتصال",
-    "address": "١٢٣ شارع الابتكار، وادي التقنية، دبي، الإمارات العربية المتحدة",
+    "address": "الرقم ١١٤ ، الطابق الميزانين ، مركز الخليج التجاري ، منطقة بر دبي ، دبي ، الإمارات العربية المتحدة",
     "newsletterTitle": "ابق على اطلاع",
     "newsletterDescription": "اشترك في نشرتنا الإخبارية واحصل على آخر التحديثات حول الابتكارات التقنية وفرص الاستثمار.",
     "emailPlaceholder": "أدخل بريدك الإلكتروني",
@@ -118,11 +118,11 @@
     "subtitle": "تواصل معنا لأي استفسارات أو دعم",
     "getInTouch": "تواصل معنا",
     "location": "الموقع",
-    "locationValue": "دبي، الإمارات العربية المتحدة",
+    "locationValue": "الرقم ١١٤ ، الطابق الميزانين ، مركز الخليج التجاري ، منطقة بر دبي ، دبي ، الإمارات العربية المتحدة",
     "email": "البريد الإلكتروني",
     "emailValue": "info@stellarsep.com",
     "phone": "الهاتف",
-    "phoneValue": "+971 50 123 4567",
+    "phoneValue": "+971502648618",
     "workingHours": "ساعات العمل",
     "workingHoursValue": "الأحد - الخميس: 9:00 صباحاً - 6:00 مساءً",
     "followUs": "تابعنا",
